--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://adventuremediacstack.github.io/Perfect-Rear-Bumper-for-3rd-Gen-4Runner-2-Inch-Lift-Build/">https://adventuremediacstack.github.io/Perfect-Rear-Bumper-for-3rd-Gen-4Runner-2-Inch-Lift-Build/</a><br>
+                <a target="_bLank" href="https://teqcustoms.s3.us-east-005.backblazeb2.com/Perfect+Rear+Bumper+for+3rd+Gen+4Runner+2+Inch+Lift+Build/index.html">https://teqcustoms.s3.us-east-005.backblazeb2.com/Perfect+Rear+Bumper+for+3rd+Gen+4Runner+2+Inch+Lift+Build/index.html</a><br>
+                <a target="_bLank" href="https://perfect-rear-bumper-f-git-ed9f4b-adventuremediacstacks-projects.vercel.app/">https://perfect-rear-bumper-f-git-ed9f4b-adventuremediacstacks-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://peppy-cocada-a6b9db.netlify.app/">https://peppy-cocada-a6b9db.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
